<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory
    android:title="@string/authentication_category">
    <SwitchPreference
        android:defaultValue="false"
        android:key="authentication_key"
        android:title="@string/authentication_title"
        android:summary="@string/authentication_summary"/>
    <EditTextPreference
        android:inputType="textPassword"
        android:key="password_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:title="Password"
        android:summary="Set your password"
        android:icon="@drawable/ic_lock_black_24dp"
        />

    </PreferenceCategory>
<PreferenceCategory
    android:title="@string/attendance_setting">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="75"
        android:inputType="number"
        android:numeric="integer"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name"
        />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="noti_default"
        android:title="Defaulter Notification"
        android:summary="When attendance of any subject falls below the minimum, you will be notified"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
  <!--  <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
      -->
</PreferenceCategory>
    <PreferenceCategory
        android:title="@string/notification_setting">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="noti_sound"
            android:title="Notification Sound"
            android:summary="set sound of notification"/>
    </PreferenceCategory>
</PreferenceScreen>
